--- a/package.json
+++ b/package.json
@@ -50,7 +50,10 @@
     "@aws-cdk/cli-lib-alpha": "^2.81.0-alpha.0",
     "aws-cdk-lib": "^2.81.0",
     "commander": "^10.0.1",
+    "openai": "^3.3.0",
     "p-debounce": "^4.0.0",
+    "tree-sitter": "^0.20.5",
+    "tree-sitter-typescript": "^0.20.1",
     "vscode-languageserver": "^8.1.0",
     "vscode-languageserver-protocol": "^3.17.3",
     "vscode-languageserver-textdocument": "^1.0.8",
